--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "prettier": "^3.0.0",
-    "prettier-plugin-astro": "^0.11.0"
+    "prettier": "2.8.8",
+    "prettier-plugin-astro": "0.10.0"
   }
 }
