--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.8.3",
-    "tailwindcss": "^3.3.3"
+    "@astrojs/preact": "2.2.1",
+    "@astrojs/tailwind": "4.0.0",
+    "astro": "2.8.3",
+    "preact": "10.16.0",
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "prettier": "2.8.8",
