--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/preact": "2.2.1",
     "@astrojs/tailwind": "4.0.0",
-    "astro": "2.8.3",
+    "@astrojs/vercel": "^3.8.1",
+    "astro": "^2.10.7",
     "preact": "10.16.0",
+    "resend": "^0.17.2",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
