--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/preact": "2.2.1",
-    "@astrojs/tailwind": "4.0.0",
-    "@astrojs/vercel": "^3.8.1",
-    "astro": "^2.10.7",
+    "@astrojs/preact": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/vercel": "^5.0.1",
+    "astro": "^3.2.0",
     "preact": "10.16.0",
     "resend": "^0.17.2",
     "tailwindcss": "3.3.3"
